public class Monster extends Unit{
    private String name;
    Monster() { name = "杂兵"; }
    public String getName() { return name; }
}
