public class Scorpion extends Unit{
    private String name;
    Scorpion() { name = "蝎子"; }
    public String getName() { return name; }
}
